styles.css
/* MISC HTML ELEMENTS */
body {
  font-family: 'Luckiest Guy', cursive;
  color: #383838;
  letter-spacing: 1px;
  background: linear-gradient(to bottom right, #18ffff, #1de9b6) center center no-repeat fixed;
}

::selection {
  background-color: #1de9b6;
}

/* END MISC HTML ELEMENTS */

/* HEADER STYLING */
header {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 4rem;
  transition: opacity 300ms 600ms;
}

header .title h1 {
  font-size: 3rem;
}

.player-performance {
  font-family: 'Luckiest Guy', cursive;
  font-size: 1.3rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 1rem 0 1rem;
}

.restart-button {
  font-family: 'Open Sans', sans-serif;
}

.restart-button-wrapper {
  margin: .5rem 0 2rem;
}

.timer,
.moves,
.rating {
  margin-top: 1rem;
}

/* END HEADER STYLING */

/* SHARED HEADER AND DISPLAY */
.title {
  text-align: center;
}

.title h1 {
  margin: 0;
  font-size: 2.2rem;
}

.restart-button {
  cursor: pointer;
  background-color: #005ADC; 
  border: none;
  color: #fefdfb;
  padding: 1rem 2rem;
  text-align: center;
  font-size: 1.1rem;
  border-radius: .3rem;
  box-shadow: 2px 3px 3px #383838;
  transition: background-color 300ms
}

.restart-button:hover {
  background-color: #0044A7;
}

/* SHARED HEADER AND DISPLAY */

/* Class added via JS to header and .card-wrapper
when popup modal is displayed */
.fade-background {
  opacity: .3;
}

/* CARD STYLING */
.card-wrapper {
  perspective: 1000px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  padding: 1rem;
  margin: 0 auto 2rem;
  box-shadow: inset 1px 1px 15px rgba(0, 182, 131, .55);
  transition: opacity 300ms 600ms;
}

.card {
  transform-style: preserve-3d;
  position: relative;
  width: 4.6rem;
  height: 4.6rem;
  margin: 10px;
  cursor: pointer;
  box-shadow: 2px 3px 3px #37006a;
  border-radius: .5rem;
  transition: transform 600ms cubic-bezier(0.23, 0.885, 0.32, 1.5);
}

.card-front,
.card-back {
  backface-visibility: hidden;
  border-radius: .5rem;
}

.card-front {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #6a1b9a;
}

.card-back {
  display: flex;
  align-self: center;
  justify-content: center;
  flex-direction: column;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  bottom: 0;
  text-align: center;
  font-size: 3rem;
  transform: rotateY(-180deg);
  background-color: #fefdfb;
  transition: background-color 100ms 200ms
}

.flip-card {
  transform: rotateY(180deg);
}

.flip-card-valid-match {
  animation: cards-valid 800ms cubic-bezier(0.23, 0.885, 0.32, 1.5);
}

.flip-card-invalid-match {
  animation: cards-invalid 800ms cubic-bezier(0.23, 0.885, 0.32, 1.5);
}

.card-back-match {
  background-color: #00ff9e;
}

.card-back-mismatch {
  background-color: #ff0049;
}

@keyframes cards-valid {
  0% {transform: skewX(0deg) rotateY(180deg)}
  50% {transform: skewX(10deg) rotateY(180deg)}
  75% {transform: skewX(-10deg) rotateY(180deg)}
  100% {transform: skewX(0deg) rotateY(180deg)}
}

@keyframes cards-invalid {
  0% {transform: translateX(0) rotateY(180deg)}
  50% {transform: translateX(10px) rotateY(180deg)}
  75% {transform: translateX(-10px) rotateY(180deg)}
  100% {transform: translateX(0) rotateY(180deg)}
}

/* END CARD STYLING */

/* POPUP STYLING */
.popup {
  position: absolute;
  width: 79%;
  height: 33%;
  top: 11%;
  left: 10%;
  padding-top: 2rem;
  border-radius: .5rem;
  background-color: #18ffff;
  box-shadow: 2px 3px 15px #383838;
  z-index: 1;
  transform: scale(0);
  transition: transform 400ms 600ms ease-in-out;
}

.display-popup {
  transform: scale(1);
}

.display-popup-info {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.display-popup-info h3 {
  font-family: 'Open Sans', sans-serif;
}

.pop-up-timer {
 margin-top: 1rem;
}

.pop-up-timer,
.pop-up-rating {
  font-size: 1.2rem;
  margin-bottom: 1rem;
}

/* END POPUP STYLING */

/* MEDIA QUERIES */
@media screen and (min-width: 768px) {
  header .title h1 {
    font-size: 5rem;
  }

  .title h1 {
    font-size: 2.8rem;
  }
  
  .player-performance {
    flex-direction: row;
    justify-content: space-evenly;
    width: 30rem;
  }

  .card-wrapper {
    width: 90%;
  }

  .card {
    width: 7.5rem;
    height: 7.5rem;
  }
}

@media screen and (min-width: 1024px) {
  .card-wrapper {
    width: 80%;
  }

  .card {
    width: 10rem;
    height: 10rem;
  }

  .popup {
    width: 54%;
    left: 22%;
  }
}

@media screen and (min-width: 1440px) {
  .card-wrapper {
    width: 47%;
  }

  .popup {
    width: 30%;
    height: 30%;
    top: 13%;
    left: 35%;
  }
}

/* END MEDIA QUERIES */

